--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,8 +15,14 @@ jobs:
       image:  google/dart:latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable'
     - name: Install dependencies
       run: flutter pub get
     - name: Run tests
-      run: flutter pub run test
+      run: flutter test
