--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -11,8 +11,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    container:
-      image:  google/dart:latest
+    #container:
+    #  image:  google/dart:latest
 
     steps:
     - uses: actions/checkout@v1
@@ -21,8 +21,6 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'stable'
-    - name: Install dependencies
-      run: flutter pub get
-    - name: Run tests
-      run: flutter test
+        flutter-version: '1.9.1+hotfix.6'
+    - run: flutter pub get
+    - run: flutter test
