--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -24,4 +24,5 @@ jobs:
         flutter-version: '1.17.5' # you can use 1.12
         channel: 'stable'
     - run: flutter pub get
-    - run: flutter test
+    #- run: flutter test
+    - run: flutter build apk
