--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,4 +1,4 @@
-name: Dart CI
+name: Flutter Build APK CI
 
 on:
   push:
@@ -10,9 +10,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
-    #container:
-    #  image:  google/dart:latest
 
     steps:
     - uses: actions/checkout@v1
