--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -21,5 +21,5 @@ jobs:
         flutter-version: '1.17.5' # you can use 1.12
         channel: 'stable'
     - run: flutter pub get
-    #- run: flutter test
-    - run: flutter build apk
+    # - run: flutter test
+    # - run: flutter build apk
