--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: LeniBooks
-description: A new Flutter project.
+description: A simple and elegant app for managing books you've read or want to read.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  share: 0.6.4+3
   
   flutter_automation: ^1.3.3
 
