--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -2,9 +2,15 @@ name: Flutter Build APK CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - develop
+      - testing
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - develop
+      - testing
 
 jobs:
   build:
@@ -21,5 +27,5 @@ jobs:
         flutter-version: '1.17.5' # you can use 1.12
         channel: 'stable'
     - run: flutter pub get
-    # - run: flutter test
+    - run: flutter test
     # - run: flutter build apk
